--- a/appveyor.yml
+++ b/appveyor.yml
@@ -160,7 +160,29 @@ after_build:
   - IF %ARCH%==x86_64-w64-mingw32 (cp C:\msys64\mingw64\bin\libreadline8.dll C:\projects\dist\bin)
   - IF %ARCH%==x86_64-w64-mingw32 (cp C:\msys64\mingw64\bin\libtermcap-0.dll C:\projects\dist\bin)
   - IF %ARCH%==x86_64-w64-mingw32 (cp C:\msys64\mingw64\bin\zlib1.dll C:\projects\dist\bin)
+
   - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\zlib1.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libbz2-1.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libstdc++-6.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libgfortran-5.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libmetis.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libblas.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libopenblas.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libtermcap-0.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libtermcap-0.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\liblapack.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libgcc_s_seh-1.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libwinpthread-1.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libcholmod.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libgomp-1.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libcamd.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libamd.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libsuitesparseconfig.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libreadline8.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libquadmath-0.dll)
+
+  - IF %ARCH%==x86_64-w64-mingw32 (ls C:\msys64\mingw64\bin\*.dll)
+
   - IF %ARCH%==x86_64-w64-mingw32 (cp C:\msys64\mingw64\bin\libcholmod.dll C:\projects\dist\bin)
   - IF %ARCH%==x86_64-w64-mingw32 (cp C:\msys64\mingw64\bin\libcolamd.dll C:\projects\dist\bin)
   - IF %ARCH%==x86_64-w64-mingw32 (cp C:\msys64\mingw64\bin\libccolamd.dll C:\projects\dist\bin)
