--- a/appveyor.yml
+++ b/appveyor.yml
@@ -181,7 +181,7 @@ after_build:
   - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libreadline8.dll)
   - IF %ARCH%==x86_64-w64-mingw32 (ldd C:\msys64\mingw64\bin\libquadmath-0.dll)
 
-  - IF %ARCH%==x86_64-w64-mingw32 (ls C:\msys64\mingw64\bin\*.dll)
+  - IF %ARCH%==x86_64-w64-mingw32 (ls /c/msys64/mingw64/bin/*.dll)
 
   - IF %ARCH%==x86_64-w64-mingw32 (cp C:\msys64\mingw64\bin\libcholmod.dll C:\projects\dist\bin)
   - IF %ARCH%==x86_64-w64-mingw32 (cp C:\msys64\mingw64\bin\libcolamd.dll C:\projects\dist\bin)
