--- a/.travis.yml
+++ b/.travis.yml
@@ -159,6 +159,7 @@ script:
     ############### Building Project ####################
     source coinbrew/.ci/setup_environment.sh
     ADD_CXXFLAGS="${ADD_CXXFLAGS} -fvisibility=hidden"
+    echo "${COMMON_ARGS[@]}" "${ADD_ARGS[@]}" "${DBG_ARGS[@]}"
     $BASH coinbrew/coinbrew build $PROJECT "${COMMON_ARGS[@]}" "${ADD_ARGS[@]}" "${DBG_ARGS[@]}"
 
 after_script:
