--- a/.travis.yml
+++ b/.travis.yml
@@ -36,17 +36,38 @@ matrix:
             - libmetis-dev
             - libnauty2-dev
     - os: osx
-      osx_image: xcode11
-      env: OSX=10.14 CC=gcc CXX=g++ BUILD_STATIC=false DEBUG=false ASAN=false
+      osx_image: xcode12
+      env: OSX=10.15 BUILD_STATIC=false DEBUG=false ASAN=false
+      addons:
+        homebrew:
+          packages:
+          - bash
+          - metis
       compiler: clang
     - os: osx
       osx_image: xcode11
-      env: OSX=10.14  BUILD_STATIC=false DEBUG=false ASAN=false
-      compiler: clang
+      env: OSX=10.15 BUILD_STATIC=false DEBUG=false ASAN=false CC=gcc-9 CXX=g++-9
+      addons:
+        homebrew:
+          packages:
+          - bash
+          - gcc@9
+          - metis
+      compiler: gcc-9
     - os: osx
-      osx_image: xcode10
-      env: OSX=10.13  BUILD_STATIC=false DEBUG=false ASAN=false
+      osx_image: xcode11
+      env: OSX=10.14 BUILD_STATIC=false DEBUG=false ASAN=false
+      addons:
+        homebrew:
+          packages:
+          - bash
+          - metis
       compiler: clang
+    - os: windows
+      cache:
+        directories:
+        - $HOME/AppData/Local/Temp/chocolatey
+        - /C/tools/msys64
 
   allow_failures:
     - os: windows
@@ -92,7 +113,7 @@ script:
     if [ "$BUILD_STATIC" = "true" ]; then 
        ADD_ARGS=( --no-third-party --enable-static --disable-shared --without-lapack --disable-readline --disable-bzlib --disable-zlib --without-cholmod --without-amd --static CXXFLAGS="-static -O2 -DNDEBUG" )
     fi
-    $BASH coinbrew/coinbrew build $PROJECT "${COMMON_ARGS[@]}" "${ADD_ARGS[@]}" "${DBG_ARGS[@]}"
+    $BASH coinbrew/coinbrew build $PROJECT "${COMMON_ARGS[@]}" "${ADD_ARGS[@]}" "${DBG_ARGS[@]}" ADD_CXXFLAGS="${ADD_CXXFLAGS}" CC=${CC} CXX=${CXX}
 
 after_script:
 - |-
@@ -104,8 +125,3 @@ after_script:
         ;;
     esac
     
-cache:
-    directories:
-    - $HOME/AppData/Local/Temp/chocolatey
-    - /C/tools/msys64
-
