--- a/Cbc/test/Makefile.in
+++ b/Cbc/test/Makefile.in
@@ -42,13 +42,14 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@COIN_HAS_CLP_TRUE@am__append_1 = test_cbc ctests
-@CBC_BUILD_CBC_GENERIC_TRUE@@COIN_HAS_SAMPLE_TRUE@am__append_2 = test_cbc_generic
-#  cbcflags += -dirSample `$(CYGPATH_W) $(SAMPLE_DATA)`
-@COIN_HAS_SAMPLE_TRUE@am__append_3 = -mpsDir=`$(CYGPATH_W) $(SAMPLE_DATA)`
-@COIN_HAS_MIPLIB3_TRUE@am__append_4 = -dirMiplib `$(CYGPATH_W) $(MIPLIB3_DATA)` -unitTest
+@COIN_HAS_CLP_TRUE@@COIN_HAS_SAMPLE_TRUE@am__append_1 = test_cbc
+@COIN_HAS_CLP_TRUE@am__append_2 = ctests
+@CBC_BUILD_CBC_GENERIC_TRUE@@COIN_HAS_SAMPLE_TRUE@am__append_3 = test_cbc_generic
+@COIN_HAS_SAMPLE_TRUE@am__append_4 = -dirSample `$(CYGPATH_W) $(SAMPLE_DATA)`
+@COIN_HAS_SAMPLE_TRUE@am__append_5 = -mpsDir=`$(CYGPATH_W) $(SAMPLE_DATA)`
+@COIN_HAS_MIPLIB3_TRUE@am__append_6 = -dirMiplib `$(CYGPATH_W) $(MIPLIB3_DATA)` -unitTest
 #  cbcflags += -dirMiplib `$(CYGPATH_W) $(MIPLIB3_DATA)` -miplib
-@COIN_HAS_NETLIB_TRUE@am__append_5 = -netlibDir=`$(CYGPATH_W) $(NETLIB_DATA)` -testOsiSolverInterface
+@COIN_HAS_NETLIB_TRUE@am__append_7 = -netlibDir=`$(CYGPATH_W) $(NETLIB_DATA)` -testOsiSolverInterface
 bin_PROGRAMS = gamsTest$(EXEEXT) osiUnitTest$(EXEEXT) \
 	CInterfaceTest$(EXEEXT)
 subdir = test
@@ -456,9 +457,10 @@ AUTOMAKE_OPTIONS = foreign
 ########################################################################
 #                         unitTest for Cbc                             #
 ########################################################################
-CBC_TEST_TGTS = gamstests ositests $(am__append_1) $(am__append_2)
-cbcflags = $(am__append_4)
-ositestsflags = $(am__append_3) $(am__append_5)
+CBC_TEST_TGTS = gamstests ositests $(am__append_1) $(am__append_2) \
+	$(am__append_3)
+cbcflags = $(am__append_4) $(am__append_6)
+ositestsflags = $(am__append_5) $(am__append_7)
 gamsTest_SOURCES = gamsTest.cpp
 gamsTest_LDADD = ../src/libCbcSolver.la ../src/libCbc.la $(CBCLIB_LIBS)
 gamsTest_DEPENDENCIES = ../src/libCbcSolver.la ../src/libCbc.la $(CBCLIB_DEPENDENCIES)
